--- a/kiss.html
+++ b/kiss.html
@@ -20,9 +20,9 @@
 
 <div class="container">
              
-  <img src="file:/C:\repositorios\pdrmota.github.io/kiss1.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
-  <img src="file:/C:\repositorios\pdrmota.github.io/kiss2.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
-  <img src="file:/C:\repositorios\pdrmota.github.io/kiss3.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
+  <img src="kiss1.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
+  <img src="kiss2.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
+  <img src="kiss3.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
 
 
 </div>
@@ -81,9 +81,9 @@
 		
             <div id="collapse1" class="panel-collapse collapse">
                   <div class="panel-body">
-                  <img src="file:/C:\repositorios\pdrmota.github.io/LIVE1.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
-             <img src="file:/C:\repositorios\pdrmota.github.io/LIVE2.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
-             <img src="file:/C:\repositorios\pdrmota.github.io/LIVE3.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
+                  <img src="LIVE1.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
+             <img src="LIVE2.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
+             <img src="LIVE3.jpg" class="img-circle" alt="KISS" width="304" height="236"> 
             
                 </div>
 	 		 </div>
