exercicio final ultima tentativa dia 29

--- a/KISS4.html
+++ b/KISS4.html
@@ -45,7 +45,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="kiss1.jpg" alt="kiss1" width="460" height="345">
+        <img src="album1.jpg" alt="kiss1" width="460" height="345">
 	  <div class="carousel-caption">
 		<h3>Noticias de Ultima Hora</h3>
 		<p>KISS anuncia show no Converty.</p>
@@ -53,23 +53,23 @@
       </div>
 
       <div class="item">
-        <img src="live2.jpg" alt="live2" width="460" height="345">
+        <img src="album2.jpg" alt="live2" width="460" height="345">
+        <div class="carousel-caption">
+		<h3>Gods Of Thunder</h3>
+		<p>Considerado por muitos o melhor e mais pesado album da banda.</p>
+	  </div>
+      </div>
+    
+      <div class="item">
+        <img src="album3.jpg" alt="kiss3" width="460" height="345">
         <div class="carousel-caption">
 		<h3>Banda reformulada nos anos 80</h3>
 		<p>Com Vinnie Vincent na guitrra solo a banda ganha uma cara nova.</p>
 	  </div>
       </div>
-    
-      <div class="item">
-        <img src="kiss3.jpg" alt="kiss3" width="460" height="345">
-        <div class="carousel-caption">
-		<h3>Meados anos 90</h3>
-		<p>Após diversas mudanças o KISS segue na ativa.</p>
-	  </div>
-      </div>
 
       <div class="item">
-        <img src="live3.jpg" alt="sabbath" width="460" height="345">
+        <img src="album4.jpg" alt="sabbath" width="460" height="345">
         <div class="carousel-caption">
 		<h3>Tour do Album Revenge</h3>
 		<p>KISS reformulad com Eric Singer nas baquetas.</p>
